syntax = "proto3";

package migration;

service MigrationService{
    rpc MigrationCustomer(ChangeIdDto) returns (Respon);
    rpc AddActsCusromerReference (stream AddActDto) returns (Null);
    rpc GetCustomersLabel (Id) returns (ContractorsLabel);
}

message ChangeIdDto {
    string newId = 1;
    string oldId = 2;
}

message Respon {
    string respon = 1;
}

message AddActDto {
    string actId = 1;
    string customerId = 2;
}

message ContractorsLabel {
    string label = 1;
}

message Id {
    string id = 1;
}

message Null {}
